# shopping_cart

./: .gitignore  Makefile  README.md  architecture.puml  architeture.puml  docker-compose.yml  producer.py  pyproject.toml  requirements.txt  sonar-project.properties
app/: app.py  main.py
app/adapters/rest/v1/: handler.py
app/adapters/rest/v1/dto/: __init__.py
app/domain/: ports.py  service.py
app/domain/errors/: __init__.py
app/domain/models/: shopping_cart.py
app/repositories/: dynamodb.py  sns.py
infra/: api_gateway.tf  dynamo.tf  ecr.tf  example.txt  iam.tf  lambda.tf  main.tf  s3.tf  sns_firehose.tf  vars.tf
postman/: shopping_cart_api.postman_collection.json
