[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Rafael <30165666+raffOps@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.23"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
mangum = "^0.18.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
